# herqules

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE.txt  README.md
fpga/: CMakeLists.txt  SizedFIFO.v  ccip_interface_reg.sv  ccip_std_afu.sv  hq_fifo.json  hq_fifo.sv  hq_fifo_afu.sv  hq_fifo_csr.sv  hq_fifo_csr.vh  server.v  server_interface.vh  server_wrapper.sv  sources.txt
fpga/bsv/: MessagePack.bsv  ReadWriteCCIP.bsv
include/: compat.h  config.h  fpga.h  interfaces-rx.h  interfaces-tx.h  interfaces-verifier.h  interfaces.h  intrinsics.h  messages-verifier.h  messages.h  parser-elf.h  runtime.h  stats.h  syscalls.h
interfaces/: dpdk-rx.cpp  dpdk-rx.h  dpdk-tx.cpp  dpdk-tx.h  dpdk.h  kernel.h  model-rx.cpp  model.h  model_sim-rx.cpp  model_sim.h  none.h  opae-rx.cpp  opae-rx.h  opae-tx.h  pages.h  posix_fifo-rx.cpp  posix_fifo.h  posix_mq-rx.cpp  posix_mq.h  posix_shm-rx.cpp  posix_shm.h  sockets_unix-rx.cpp  sockets_unix.h  zero.h
kernel/: CMakeLists.txt  Kbuild  dfl.h  feature-dev.h  hooks.c  hooks.h  hq-interface.c  hq-interface.h  hq.h  interface-stats.c  interface-stats.h  interface.c  interface.h  verifier.c  verifier.h  xarray.c  xarray.h
kernel/pages/: CMakeLists.txt  Kbuild  pages.c
kernel/patches/: fpga_debug.patch  fpga_pid.patch  fpga_wc.patch
llvm/: CMakeLists.txt  cfi-finalize.cpp  cfi-finalize.h  cfi-init.cpp  cfi-init.h  cfi-instrument.cpp  cfi-instrument.h  hq-syscall.cpp  hq-syscall.h  utils.cpp  utils.h
rtlib/: CMakeLists.txt  init.cpp  init.h  rtlib.cpp  rtlib.h
scripts/: build.sh  build_simulator.sh  combine.py  envs.sh  libjson0_0.12.1.deb  lit2csv.sh  run-nginx.sh  run.sh  setup.sh
scripts/simulations/: cfi_check_workloads.sh  cfi_interesting_stats.py  make_graph.py  parse_zsim_results.py  print_experiments.sh  run_all.sh  zsim_failed_assertion.sh
tests/: CMakeLists.txt  cpp.cpp  general.cpp  rtt.cpp  rtt_syscall.cpp  syscalls.c  threads.c
tests/fpga/: CMakeLists.txt  csr_mgr.h  latency.cpp  linked_list_malloc.cpp  micro_a.cpp  micro_b.cpp  opae_svc_wrapper.cpp  opae_svc_wrapper.h
tests/patches/: 400-perlbench-ms.patch  400-perlbench.patch  464-h264ref-ms.patch  471-omnetpp-asan.patch  471-omnetpp.patch  483-xalancbmk.patch  500-perlbench_r.patch  502-gcc_r-ms.patch  502-gcc_r.patch  520-omnetpp_r.patch  526-blender_r.patch  LowFat.md  README.md
verifier/: CMakeLists.txt  main.cpp  process.cpp  process.h  verifier-elf.cpp  verifier-elf.h  verifier.h
